i added new stuff

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <body>
         <h1>second website</h1>
         <p>second website</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium autem ducimus quia, vitae vero laborum? Dolorum, eveniet dignissimos sapiente veniam nulla eum libero illo repellat ipsa vero! Recusandae ipsa commodi vitae deserunt nemo excepturi quae non rem ducimus quis sed modi minus, odio nostrum enim aperiam neque. Et, cumque temporibus?</p>
+        
     </body>
 </html>
